SERVER-40175 Rebuild any missing _id indexes on startup