src/mongo/db/commands/drop_indexes.cpp
@@ -54,6 +54,7 @@
 #include "mongo/db/service_context.h"
 #include "mongo/db/views/view_catalog.h"
 #include "mongo/util/log.h"
+#include "mongo/util/quick_exit.h"
 
 namespace mongo {
 
@@ -61,6 +62,8 @@ using std::endl;
 using std::string;
 using std::stringstream;
 using std::vector;
+
+MONGO_FAIL_POINT_DEFINE(reIndexCrashAfterDrop);
 
 /* "dropIndexes" is now the preferred form - "deleteIndexes" deprecated */
 class CmdDropIndexes : public BasicCommand {
@@ -208,6 +211,11 @@ public:
                 indexer->init(opCtx, collection, all, MultiIndexBlock::kNoopOnInitFn);
             uassertStatusOK(swIndexesToRebuild.getStatus());
             wunit.commit();
+        }
+
+        if (MONGO_FAIL_POINT(reIndexCrashAfterDrop)) {
+            log() << "exiting because 'reIndexCrashAfterDrop' fail point was set";
+            quickExit(EXIT_ABRUPT);
         }
 
         auto status = indexer->insertAllDocumentsInCollection(opCtx, collection);
