src/mongo/db/repair_database_and_check_version.cpp
@@ -39,6 +39,7 @@
 #include "mongo/db/catalog/database.h"
 #include "mongo/db/catalog/database_catalog_entry.h"
 #include "mongo/db/catalog/database_holder.h"
+#include "mongo/db/catalog/multi_index_block.h"
 #include "mongo/db/commands/feature_compatibility_version.h"
 #include "mongo/db/commands/feature_compatibility_version_documentation.h"
 #include "mongo/db/commands/feature_compatibility_version_parser.h"
@@ -149,14 +150,43 @@ bool checkIdIndexExists(OperationContext* opCtx, const CollectionCatalogEntry* c
     return false;
 }
 
+Status buildMissingIdIndex(OperationContext* opCtx, Collection* collection) {
+    MultiIndexBlock indexer;
+    ON_BLOCK_EXIT([&] { indexer.cleanUpAfterBuild(opCtx, collection); });
+
+    const auto indexCatalog = collection->getIndexCatalog();
+    const auto idIndexSpec = indexCatalog->getDefaultIdIndexSpec();
+
+    auto swSpecs = indexer.init(opCtx, collection, idIndexSpec, MultiIndexBlock::kNoopOnInitFn);
+    if (!swSpecs.isOK()) {
+        return swSpecs.getStatus();
+    }
+
+    auto status = indexer.insertAllDocumentsInCollection(opCtx, collection);
+    if (!status.isOK()) {
+        return status;
+    }
+
+    WriteUnitOfWork wuow(opCtx);
+    status = indexer.commit(
+        opCtx, collection, MultiIndexBlock::kNoopOnCreateEachFn, MultiIndexBlock::kNoopOnCommitFn);
+    wuow.commit();
+    return status;
+}
+
+
 /**
- * Checks that all replicated collections in the given list of 'dbNames' have UUIDs and an index on
- * the _id field. Returns a MustDowngrade error status if any do not satisfy these requirements.
+ * Checks that all collections in the given list of 'dbNames' have valid properties for this version
+ * of MongoDB.
  *
- * Additionally assigns UUIDs to any non-replicated collections that are missing UUIDs.
+ * This validates that all collections have UUIDs and an _id index. If a collection is missing an
+ * _id index, this function will build it.
+ *
+ * Returns a MustDowngrade error if any collections are missing UUIDs.
+ * Returns a MustDowngrade error if any index builds on the required _id field fail.
  */
-Status ensureAllCollectionsHaveUUIDs(OperationContext* opCtx,
-                                     const std::vector<std::string>& dbNames) {
+Status ensureCollectionProperties(OperationContext* opCtx,
+                                  const std::vector<std::string>& dbNames) {
     auto databaseHolder = DatabaseHolder::get(opCtx);
     auto downgradeError = Status{ErrorCodes::MustDowngrade, mustDowngradeErrorMsg};
 
@@ -172,19 +202,27 @@ Status ensureAllCollectionsHaveUUIDs(OperationContext* opCtx,
 
             // We expect all collections to have UUIDs in MongoDB 4.2
             if (!coll->uuid()) {
+                error() << "collection " << coll->ns() << " is missing a UUID";
                 return downgradeError;
             }
 
-            // All collections created since MongoDB 4.0 have _id indexes.
+            // All user-created replicated collections created since MongoDB 4.0 have _id indexes.
             auto requiresIndex = coll->requiresIdIndex() && coll->ns().isReplicated();
             auto catalogEntry = coll->getCatalogEntry();
             auto collOptions = catalogEntry->getCollectionOptions(opCtx);
             auto hasAutoIndexIdField = collOptions.autoIndexId == CollectionOptions::YES;
 
-            // If the autoIndexId field is not YES, the index may have been created later.
-            // Check the list of indexes to confirm index does not exist before returning an error.
+            // Even if the autoIndexId field is not YES, the collection may still have an _id index
+            // that was created manually by the user. Check the list of indexes to confirm index
+            // does not exist before attempting to build it or returning an error.
             if (requiresIndex && !hasAutoIndexIdField && !checkIdIndexExists(opCtx, catalogEntry)) {
-                return downgradeError;
+                log() << "collection " << coll->ns() << " is missing an _id index; building it now";
+                auto status = buildMissingIdIndex(opCtx, coll);
+                if (!status.isOK()) {
+                    error() << "could not build an _id index on collection " << coll->ns() << ": "
+                            << status;
+                    return downgradeError;
+                }
             }
         }
     }
@@ -325,7 +363,7 @@ bool repairDatabasesAndCheckVersion(OperationContext* opCtx) {
         rebuildIndexes(opCtx, storageEngine);
     }
 
-    bool repairVerifiedAllCollectionsHaveUUIDs = false;
+    bool ensuredCollectionProperties = false;
 
     // Repair all databases first, so that we do not try to open them if they are in bad shape
     auto databaseHolder = DatabaseHolder::get(opCtx);
@@ -361,8 +399,8 @@ bool repairDatabasesAndCheckVersion(OperationContext* opCtx) {
 
         // All collections must have UUIDs before restoring the FCV document to a version that
         // requires UUIDs.
-        uassertStatusOK(ensureAllCollectionsHaveUUIDs(opCtx, dbNames));
-        repairVerifiedAllCollectionsHaveUUIDs = true;
+        uassertStatusOK(ensureCollectionProperties(opCtx, dbNames));
+        ensuredCollectionProperties = true;
 
         // Attempt to restore the featureCompatibilityVersion document if it is missing.
         NamespaceString fcvNSS(NamespaceString::kServerConfigurationNamespace);
@@ -379,9 +417,8 @@ bool repairDatabasesAndCheckVersion(OperationContext* opCtx) {
         }
     }
 
-    // All collections must have UUIDs.
-    if (!repairVerifiedAllCollectionsHaveUUIDs) {
-        uassertStatusOK(ensureAllCollectionsHaveUUIDs(opCtx, dbNames));
+    if (!ensuredCollectionProperties) {
+        uassertStatusOK(ensureCollectionProperties(opCtx, dbNames));
     }
 
     if (!storageGlobalParams.readOnly) {
